# cpp

./: .env.example  CMakeLists.txt  readme.md  standards.md
Config/: CMakeLists.txt  Config.cpp  Config.h
Core/: CMakeLists.txt
Core/API/v1/: APIManager.h  AccountAPI.h  CMakeLists.txt
Core/BlizzardLoader/: CMakeLists.txt
Core/BlizzardLoader/BlizzardLoader/: BlizzardLoader.cpp  BlizzardLoader.h
Core/BlizzardLoader/Drivers/WDBC/: WDBC.cpp  WDBC.h
Core/Database/: CMakeLists.txt
Core/Database/DB/: DB.cpp  DB.h
Core/Database/Drivers/MySQL/: MySQL.cpp  MySQL.h
Core/Database/Migration/: Migration.cpp  Migration.h  MigrationManager.cpp  MigrationManager.h
Core/Database/MySQL/: MySQL.cpp  MySQL.h
Core/Database/QueryBuilder/: QueryBuilder.h
Core/Models/: CMakeLists.txt  Model.cpp  Model.h
Core/Models/Auth/: CMakeLists.txt
Core/Models/Auth/Account/: Account.cpp  Account.h
Core/Models/Main/: CMakeLists.txt
Core/Models/Main/AccountModel/: AccountModel.cpp  AccountModel.h
Core/Models/Main/ConsolePermissionModel/: ConsolePermissionModel.cpp  ConsolePermissionModel.h
Core/Models/Main/PermissionModel/: PermissionModel.cpp  PermissionModel.h
Core/Scripts/Commands/: AccountCommand.h  CMakeLists.txt  CommandContract.h  LookupCommand.h  MigrationCommand.h
Core/Scripts/Commands/AccountCommand/: AccountCommand.cpp  AccountCommand.h
Core/Scripts/Commands/Command/: Command.cpp  Command.h
Core/Scripts/Commands/LookupCommand/: LookupCommand.cpp  LookupCommand.h
Core/Scripts/Commands/MigrateCommand/: MigrateCommand.cpp  MigrateCommand.h
Core/Scripts/Commands/MigrationCommand/: MigrationCommand.cpp  MigrationCommand.h
Core/Support/: CMakeLists.txt  DateTime.h  DotEnv.h  Json.h  String.h
Core/Support/DateTime/: DateTime.cpp  DateTime.h
Core/Support/DotEnv/: DotEnv.cpp  DotEnv.h
Core/Support/Log/: Log.cpp  Log.h
Core/Support/String/: String.cpp  String.h
Database/: CMakeLists.txt
Database/Data/json/: console_permission.json  permissions.json  role_permission.json  roles.json
Database/Migrations/: CMakeLists.txt  DataObjects.h
Database/Migrations/Auth/: CMakeLists.txt
Database/Migrations/Auth/2022_11_27_01_47_07_create_accounts_table/: Migration_2022_11_27_01_47_07_create_accounts_table.cpp  Migration_2022_11_27_01_47_07_create_accounts_table.h
Database/Migrations/Main/: CMakeLists.txt  Migration_2022_11_27_01_47_07_create_accounts_table.h  Migration_2022_12_05_12_20_44_create_roles_table.h  Migration_2022_12_05_13_15_28_create_migrations_table.h  Migration_2022_12_08_10_00_45_create_permissions_table.h  Migration_2022_12_08_10_19_31_create_role_permission_table.h  Migration_2022_12_08_10_19_41_create_account_role_table.h  Migration_2022_12_08_18_38_47_create_console_permission_table.h
Database/Migrations/Main/Migration_2022_12_05_12_20_44_create_roles_table/: Migration_2022_12_05_12_20_44_create_roles_table.cpp  Migration_2022_12_05_12_20_44_create_roles_table.h
Database/Migrations/Main/Migration_2022_12_05_13_15_28_create_migrations_table/: Migration_2022_12_05_13_15_28_create_migrations_table.cpp  Migration_2022_12_05_13_15_28_create_migrations_table.h
Dependencies/: CMakeLists.txt
Game/Entities/Player/: Player.h
Servers/: CMakeLists.txt
Servers/API/: Main.cpp
Servers/Auth/: Main.cpp
Servers/Chat/: Main.cpp
Servers/Guild/: Main.cpp
Servers/Instance/: Main.cpp
Servers/Mail/: Main.cpp
Servers/Manager/: Main.cpp
Servers/World/: Main.cpp
