add_library(Migration_2022_12_05_12_20_44_create_roles_table Migration_2022_12_05_12_20_44_create_roles_table/Migration_2022_12_05_12_20_44_create_roles_table.h Migration_2022_12_05_12_20_44_create_roles_table/Migration_2022_12_05_12_20_44_create_roles_table.cpp)
target_include_directories(Migration_2022_12_05_12_20_44_create_roles_table PUBLIC "${PROJECT_SOURCE_DIR}/Core/Database/Migration")
target_include_directories(Migration_2022_12_05_12_20_44_create_roles_table PUBLIC "${PROJECT_SOURCE_DIR}/Config")
target_link_libraries(Migration_2022_12_05_12_20_44_create_roles_table PUBLIC Migration Config)

add_library(Migration_2022_12_05_13_15_28_create_migrations_table Migration_2022_12_05_13_15_28_create_migrations_table/Migration_2022_12_05_13_15_28_create_migrations_table.h Migration_2022_12_05_13_15_28_create_migrations_table/Migration_2022_12_05_13_15_28_create_migrations_table.cpp)
target_include_directories(Migration_2022_12_05_13_15_28_create_migrations_table PUBLIC "${PROJECT_SOURCE_DIR}/Core/Database/Migration")
target_include_directories(Migration_2022_12_05_13_15_28_create_migrations_table PUBLIC "${PROJECT_SOURCE_DIR}/Config")
target_link_libraries(Migration_2022_12_05_13_15_28_create_migrations_table PUBLIC Migration Config)
