add_library(Migration_2022_12_05_13_15_28_create_migrations_table Migration_2022_12_05_13_15_28_create_migrations_table.h)
set_target_properties(Migration_2022_12_05_13_15_28_create_migrations_table PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(Migration_2022_12_05_13_15_28_create_migrations_table PUBLIC "${PROJECT_SOURCE_DIR}/Core/Database/Migration")
target_include_directories(Migration_2022_12_05_13_15_28_create_migrations_table PUBLIC "${PROJECT_SOURCE_DIR}/Config")
target_link_libraries(Migration_2022_12_05_13_15_28_create_migrations_table PUBLIC Migration Config)

add_library(Migration_2022_11_27_01_47_07_create_accounts_table Migration_2022_11_27_01_47_07_create_accounts_table.h)
set_target_properties(Migration_2022_11_27_01_47_07_create_accounts_table PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(Migration_2022_11_27_01_47_07_create_accounts_table PUBLIC "${PROJECT_SOURCE_DIR}/Core/Database/Migration")
target_include_directories(Migration_2022_11_27_01_47_07_create_accounts_table PUBLIC "${PROJECT_SOURCE_DIR}/Config")
target_link_libraries(Migration_2022_11_27_01_47_07_create_accounts_table PUBLIC Migration Config)

add_library(Migration_2022_12_05_12_20_44_create_roles_table Migration_2022_12_05_12_20_44_create_roles_table.h)
set_target_properties(Migration_2022_12_05_12_20_44_create_roles_table PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(Migration_2022_12_05_12_20_44_create_roles_table PUBLIC "${PROJECT_SOURCE_DIR}/Core/Database/Migration")
target_include_directories(Migration_2022_12_05_12_20_44_create_roles_table PUBLIC "${PROJECT_SOURCE_DIR}/Config")
target_link_libraries(Migration_2022_12_05_12_20_44_create_roles_table PUBLIC Migration Config)

add_library(Migration_2022_12_08_10_00_45_create_permissions_table Migration_2022_12_08_10_00_45_create_permissions_table.h)
set_target_properties(Migration_2022_12_08_10_00_45_create_permissions_table PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(Migration_2022_12_08_10_00_45_create_permissions_table PUBLIC "${PROJECT_SOURCE_DIR}/Core/Database/Migration")
target_include_directories(Migration_2022_12_08_10_00_45_create_permissions_table PUBLIC "${PROJECT_SOURCE_DIR}/Config")
target_link_libraries(Migration_2022_12_08_10_00_45_create_permissions_table PUBLIC Migration Config)

add_library(Migration_2022_12_08_10_19_31_create_role_permission_table Migration_2022_12_08_10_19_31_create_role_permission_table.h)
set_target_properties(Migration_2022_12_08_10_19_31_create_role_permission_table PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(Migration_2022_12_08_10_19_31_create_role_permission_table PUBLIC "${PROJECT_SOURCE_DIR}/Core/Database/Migration")
target_include_directories(Migration_2022_12_08_10_19_31_create_role_permission_table PUBLIC "${PROJECT_SOURCE_DIR}/Config")
target_link_libraries(Migration_2022_12_08_10_19_31_create_role_permission_table PUBLIC Migration Config)

add_library(Migration_2022_12_08_10_19_41_create_account_role_table Migration_2022_12_08_10_19_41_create_account_role_table.h)
set_target_properties(Migration_2022_12_08_10_19_41_create_account_role_table PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(Migration_2022_12_08_10_19_41_create_account_role_table PUBLIC "${PROJECT_SOURCE_DIR}/Core/Database/Migration")
target_include_directories(Migration_2022_12_08_10_19_41_create_account_role_table PUBLIC "${PROJECT_SOURCE_DIR}/Config")
target_link_libraries(Migration_2022_12_08_10_19_41_create_account_role_table PUBLIC Migration Config)

add_library(Migration_2022_12_08_18_38_47_create_console_permission_table Migration_2022_12_08_18_38_47_create_console_permission_table.h)
set_target_properties(Migration_2022_12_08_18_38_47_create_console_permission_table PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(Migration_2022_12_08_18_38_47_create_console_permission_table PUBLIC "${PROJECT_SOURCE_DIR}/Core/Database/Migration")
target_include_directories(Migration_2022_12_08_18_38_47_create_console_permission_table PUBLIC "${PROJECT_SOURCE_DIR}/Config")
target_link_libraries(Migration_2022_12_08_18_38_47_create_console_permission_table PUBLIC Migration Config)
